# cppdev

./: README.md
.devcontainer/: Dockerfile  devcontainer.json
playground/: README.md
playground/libevent-http-server/: CMakeLists.txt  main.c
playground/libevent-http-server/cmake/modules/: Findlibevent.cmake
playground/libevent-http-server/src/: CMakeLists.txt  demo.c  demo.h
playground/librdkafka-sample/: Dockerfile  docker-compose.yml
playground/librdkafka-sample/cmake/modules/: Findlibrdkafka.cmake
playground/librdkafka-sample/consumer/: CMakeLists.txt  consumer.c
playground/librdkafka-sample/producer/: CMakeLists.txt  producer.c
